Bug 462549:  Verify that an appcache manifest hasn't changed at the end of an update.  r+sr=biesi