uriloader/prefetch/nsOfflineCacheUpdate.h
@@ -138,6 +138,9 @@ public:
         { return (mParserState != PARSE_INIT && mParserState != PARSE_ERROR); }
     PRBool NeedsUpdate() { return mParserState != PARSE_INIT && mNeedsUpdate; }
 
+    void GetManifestHash(nsCString &aManifestHash)
+        { aManifestHash = mManifestHashValue; }
+
 private:
     static NS_METHOD ReadManifest(nsIInputStream *aInputStream,
                                   void *aClosure,
@@ -196,6 +199,7 @@ private:
     // manifest hash data
     nsCOMPtr<nsICryptoHash> mManifestHash;
     PRBool mManifestHashInitialized;
+    nsCString mManifestHashValue;
     nsCString mOldManifestHashValue;
 };
 
@@ -216,6 +220,8 @@ public:
     nsresult Cancel();
 
     void LoadCompleted();
+    void ManifestCheckCompleted(nsresult aStatus,
+                                const nsCString &aManifestHash);
 
     void AddDocument(nsIDOMDocument *aDocument) {
         mDocuments.AppendObject(aDocument);
@@ -281,6 +287,10 @@ private:
 
     /* Documents that requested this update */
     nsCOMArray<nsIDOMDocument> mDocuments;
+
+    /* Reschedule count.  When an update is rescheduled due to
+     * mismatched manifests, the reschedule count will be increased. */
+    PRUint32 mRescheduleCount;
 };
 
 class nsOfflineCacheUpdateService : public nsIOfflineCacheUpdateService
